--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,8 @@
     <h2 id="counter">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button><HR></HR>
     <button id="save-btn" onclick="save()">SAVE</button>
+    <p>Previos Value</p>
+    <p id="previos-score">0</p>
     <script src="main.js"></script>
   </body>
 </html>
