--- a/index1.html
+++ b/index1.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INDEX-1</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>PEOPLE ENTERED</h1>
-    <h2 id="counter">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button><HR></HR>
-    <button id="save-btn" onclick="save()">SAVE</button>
-    <!-- <p>Previos Value</p> -->
-    <p id="previous-score">Previous entries:</p>
+    <div class="container">
+      <h1>ROW COUNTER</h1>
+      <h2 id="counter">0</h2>
+      <button id="increment-btn" onclick="increment()">INCREMENT</button
+      ><br /><br />
+      <button id="save-btn" onclick="save()">SAVE</button>
+      <!-- <p>Previos Value</p> -->
+      <p id="previous-score">Previous entries:</p>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
